# WolfRichterChatbot

./: README.md  chatbot.py  chatbot_helper.py  data.json  data.py  pyproject.toml  requirements.txt  summarize.py
.github/workflows/: check_for_latest_articles.yml
.streamlit/: config.toml
chroma.db/17328a81-62dc-4fc4-9833-49d90ad2fbcb/: index_metadata.pickle
styles/: styles.css
