[tool.poetry]
name = "wolfrichterchatbot"
version = "0.1.0"
description = "RAG-driven chatbot for querying information on Wolf Street articles"
authors = ["Gordon Weakliem <gordon@eighty-twenty.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
chromadb = "^0.4.24"
feedparser = "^6.0.11"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
langsmith = "^0.1.47"
openai = "^1.17.1"
streamlit = "^1.33.0"
pysqlite3 = "^0.5.2"
tiktoken = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
